src/objects/bupl__AP_Team__c.object
<CustomObject>
    <fields>
        <fullName>account_planning_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gestor de plan de cuenta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acpl__gf_account_planning_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Planning</label>
        <referenceTo>acpl__Account_Planning__c</referenceTo>
        <relationshipLabel>Planning Team Members</relationshipLabel>
        <relationshipName>Account_Planning_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bupl__country_id__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bupl__gf_ap_team_new_member_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notification date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>bupl__gf_ap_team_role_user_name__c</fullName>
        <label>Member Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gestor del Plan</fullName>
                </value>
                <value>
                    <fullName>Acompanante</fullName>
                    <label>Acompañante</label>
                </value>
                <value>
                    <fullName>Others</fullName>
                    <isActive>false</isActive>
                    <label>Others</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bupl__gf_ap_team_user_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Planning_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bupl__gf_ap_user_team_ind_type__c</fullName>
        <formula>bupl__gf_ap_team_user_id__c = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>I am a member of the AP Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bupl__gf_business_plan_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Plan</label>
        <referenceTo>bupl__BusinessPlan__c</referenceTo>
        <relationshipLabel>Business Plan Team</relationshipLabel>
        <relationshipName>Business_Plan_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bupl__solution_category_type__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Planning Team Member</label>
    <listViews>
        <fullName>bupl__All</fullName>
        <columns>NAME</columns>
        <columns>bupl__gf_ap_team_user_id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>bupl__Business_Plans_I_Participate_In</fullName>
        <columns>bupl__gf_business_plan_id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>bupl__gf_ap_user_team_ind_type__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Business Plans I Participate In</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Planning Team Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planning Team Members</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Edit_Record</fullName>
        <active>true</active>
        <errorConditionFormula>(ISCHANGED(OwnerId) ||
ISCHANGED(acpl__gf_account_planning_id__c) || 
	ISCHANGED(bupl__gf_business_plan_id__c) || 
	ISCHANGED(account_planning_Owner__c) || 
	ISCHANGED(bupl__gf_ap_team_role_user_name__c) || 
	ISCHANGED(bupl__gf_ap_team_user_id__c)) &amp;&amp; 
NOT(
$Setup.AccountPlanning_Administration__c.Edit_Account_Planning_Team_Members__c ||
$Profile.Name == &apos;System Administrator&apos; ||
$Profile.Name == &quot;Migracion&quot; ||
$Profile.Name == &quot;Administrador del sistema&quot;)</errorConditionFormula>
        <errorMessage>No puede editar un miembro del equipo.</errorMessage>
    </validationRules>
</CustomObject>